--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,9 @@ Imports:
     pbapply,
     parallel,
     stats,
-    utils
-RoxygenNote: 7.1.2
+    utils,
+    dplyr
+RoxygenNote: 7.2.1
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
