--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,8 @@ Imports:
     pbapply,
     parallel,
     stats,
-    utils,
-    dplyr
-RoxygenNote: 7.2.1
+    utils
+RoxygenNote: 7.1.2
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
